--- a/partials/_footer.scss
+++ b/partials/_footer.scss
@@ -1,4 +1,5 @@
 @use "variables";
+
 /**footer style**/
 footer {
   background-color: variables.$dark;
@@ -50,101 +51,116 @@ footer {
     padding: 0;
   }
 
-  &__social-icons a {
-    background: variables.$white;
-    color: #818a91;
-    border-radius: 50%;
-    width: 50px;
-    font-size: 50px;
-    -webkit-transition: all 0.2s linear;
-    -o-transition: all 0.2s linear;
-    transition: all 0.2s linear;
-    list-style: none;
-  }
-
-  &__social-icons li {
-    display: inline-block;
-    margin: 0 6px;
-    padding: 0;
-  }
-
-  &__social-icons .fa {
+  &__social-icons {
+    display: flex;
     justify-content: center;
-    font-size: 30px;
-    width: 50px;
-    text-align: center;
-    text-decoration: none;
-    margin: 5px 2px;
-    border-radius: 50%;
-    padding: 0;
-  }
+    margin-top: 10px;
 
-  &__social-icons a.facebook:hover {
-    background-color: #3b5998;
-    color: variables.$white;
-  }
+    a {
+      align-self: flex-start;
+      background: variables.$white;
+      color: #818a91;
+      border-radius: 50%;
+      width: 50px;
+      font-size: 50px;
+      -webkit-transition: all 0.2s linear;
+      -o-transition: all 0.2s linear;
+      transition: all 0.2s linear;
+      list-style: none;
 
-  &__social-icons a.twitter:hover {
-    background-color: #00aced;
-    color: variables.$white;
-  }
+      &:hover {
+        color: variables.$white;
+      }
 
-  &__social-icons a.instagram:hover {
-    background: linear-gradient(to right, #f9ce34, #ee2a7b, #6228d7);
-    color: variables.$white;
-  }
+      .facebook:hover {
+        background-color: #3b5998;
+      }
 
-  &__social-icons a.linkedin:hover {
-    background-color: #0428f5;
-    color: variables.$white;
-  }
+      .twitter:hover {
+        background-color: #00aced;
+      }
 
-  &__links {
-    padding: 0;
+      .instagram:hover {
+        background: linear-gradient(to right, #f9ce34, #ee2a7b, #6228d7);
+      }
+
+      .linkedin:hover {
+        background-color: #0428f5;
+      }
+
+    }
+
+    li {
+      display: inline-block;
+      margin: 0 6px;
+    }
+
+    .fa {
+      justify-content: center;
+      font-size: 30px;
+      width: 50px;
+      text-align: center;
+      text-decoration: none;
+      margin: 5px 2px;
+      border-radius: 50%;
+      padding: 0;
+
+    }
   }
 
   // Styles pour les liens dans le milieu
-  &__links li {
-    list-style: none;
-    text-transform: uppercase;
-    cursor: pointer;
-    line-height: 3em;
-    text-align: center;
-  }
+  &__links {
+    padding: 0;
 
-  &__link a:hover {
-    text-decoration: underline;
-    color: variables.$ldlRed;
+    li {
+      list-style: none;
+      text-transform: uppercase;
+      cursor: pointer;
+      line-height: 3em;
+      text-align: center;
+    }
+
+    a:hover {
+      text-decoration: underline;
+      color: variables.$ldlRed;
+    }
   }
 
   &__legal {
-    line-height: 8px;
+    line-height: 2px;
     text-align: center;
     color: gray;
+    margin: 0 auto;
+  }
+
+  &__nav {
+    line-height: 0
   }
 
   //Styles pour les infos: adresses, numéro de téléphone, etc.
   &__info {
-    text-align: right;
-    line-height: 0%;
-    margin: 30px;
+    display: flex;
+    flex-direction: column;
+    align-items: baseline;
+    margin: 10px;
   }
 
   &__buttons {
     cursor: pointer;
     margin-right: 0;
+
+    button {
+      text-decoration: none;
+      height: 3.2em;
+      min-width: 13vw;
+      width: 15vw;
+      margin: 10px;
+      text-transform: uppercase;
+      padding: 10px;
+      color: white;
+    }
   }
 
-  &__buttons button {
-    text-decoration: none;
-    height: 3.2em;
-    min-width: 13vw;
-    width: 15vw;
-    margin: 10px;
-    text-transform: uppercase;
-    padding: 10px;
-    color: white;
-  }
 }
 
 @media (min-width: 375px) {
@@ -219,12 +235,13 @@ footer {
     display: flex;
     flex-wrap: wrap;
     color: #999;
+
+    &__links {
+      display: flex;
+      align-items: center;
+    }
   }
 
-  .legal__links {
-    display: flex;
-    align-items: center;
-  }
 
   .footer a {
     text-transform: uppercase;
@@ -337,18 +354,19 @@ footer {
     &__buttons {
       cursor: pointer;
       margin-right: 0;
+      buttons{
+        text-decoration: none;
+        height: 3.2em;
+        min-width: 13vw;
+        width: 15vw;
+        margin: 10px;
+        text-transform: uppercase;
+        padding: 10px;
+        color: white;
+        text-align: center;
+      }
     }
 
-    &__buttons button {
-      text-decoration: none;
-      height: 3.2em;
-      min-width: 13vw;
-      width: 15vw;
-      margin: 10px;
-      text-transform: uppercase;
-      padding: 10px;
-      color: white;
-      text-align: center;
-    }
+   
   }
 }
