--- a/partials/_hero.scss
+++ b/partials/_hero.scss
@@ -88,3 +88,10 @@ div.swiper-button-next,
 div.swiper-button-prev {
   top: 50%;
 }
+
+.item button {
+  position: absolute;
+  left: 50%;
+  top: 20%;
+  transform: translateX(-50%);
+}
