début carousel swiper

--- a/partials/_base.scss
+++ b/partials/_base.scss
@@ -57,3 +57,8 @@ section:not([name="carrousel"]) {
   margin: auto;
   padding: 40px;
 }
+
+section:not([name="swiper"]) {
+  margin: auto;
+  padding: 40px;
+}
