creating swiper.js
Still doesnt work :-1:  :((

--- a/styles.css
+++ b/styles.css
@@ -833,4 +833,11 @@ section {
   height: 50vh;
   display: flex;
   justify-content: center;
+}
+.swiper .swiper-wrapper .swiper-slide img {
+  display: block;
+  width: 100%;
+  height: 100%;
+  -o-object-fit: cover;
+     object-fit: cover;
 }/*# sourceMappingURL=styles.css.map */
