--- a/partials/_swiper.scss
+++ b/partials/_swiper.scss
@@ -15,6 +15,13 @@ section{
             height:50vh;
             display: flex;
             justify-content: center;
+            img{
+                display: block;
+                width: 100%;
+                height: 100%;
+                object-fit: cover;
+
+            }
         }
 
     }
