--- a/styles.css
+++ b/styles.css
@@ -346,6 +346,12 @@ footer {
   align-items: center;
 }
 
+footer:last-of-type {
+  display: grid;
+  justify-items: center;
+  grid-template-columns: 1fr;
+}
+
 p {
   vertical-align: middle;
   align-items: center;
@@ -463,6 +469,7 @@ p {
   align-items: center;
 }
 .footer-wrapper__partner {
+  max-width: 1500px;
   display: flex;
   flex-wrap: wrap;
   flex-direction: row;
@@ -470,7 +477,6 @@ p {
   justify-content: center;
   /* Center items horizontally */
   align-items: center;
-  border: solid 2px red;
 }
 .footer-wrapper__partner img {
   margin: 10px;
