--- a/styles.css
+++ b/styles.css
@@ -172,6 +172,7 @@ section:not([name=swiper]) {
   margin: 0 0;
   height: 100%;
   padding: 0 10px;
+  transition: 0.3s ease-in-out;
 }
 .navbar .navbar-bottom ul li:hover {
   background-color: #b20838;
@@ -180,6 +181,7 @@ section:not([name=swiper]) {
   color: white;
   text-decoration: none;
   padding: 0 10px;
+  transition: 0.4s ease-in-out;
 }
 .navbar .navbar-bottom ul li a:hover {
   background-color: #b20838;
