--- a/partials/_nav.scss
+++ b/partials/_nav.scss
@@ -58,7 +58,7 @@
     .navbar-bottom {
       background-color: variables.$dark;
       ul {
-        height: 2.2rem;
+        height: 3.8rem;
         display: flex;
         list-style: none;
         justify-content: center;
@@ -78,6 +78,7 @@
           a {
             color: white;
             text-decoration: none;
+            font-size: 18px;
             padding: 0 10px;
             transition: 0.4s ease-in-out;
             &:hover {
