--- a/partials/_header.scss
+++ b/partials/_header.scss
@@ -29,6 +29,9 @@
         border: none;
         padding: 5px;
         width:10vw;
+        &:hover{
+            background-color: #570202;
+        }
     }
     
     /*Image du logo du site*/
