--- a/partials/_nav.scss
+++ b/partials/_nav.scss
@@ -84,6 +84,9 @@
             &:hover {
               background-color: variables.$ldlRed;
             }
+            &:active{
+              background-color: variables.$ldlRed;
+            }
           }
         }
       }
