--- a/styles.css
+++ b/styles.css
@@ -182,6 +182,9 @@ section:not([name=carrousel], [name=swiper]) {
 .navbar .navbar-bottom ul li a:hover {
   background-color: #b20838;
 }
+.navbar .navbar-bottom ul li a:active {
+  background-color: #b20838;
+}
 .navbar .hamburger {
   display: none;
   position: absolute;
@@ -304,10 +307,6 @@ section:not([name=carrousel], [name=swiper]) {
   grid-template-columns: 1fr, 1fr, 1fr;
   justify-content: center;
 }
-.section-card__card img {
-  border-radius: 15px;
-  width: 100%;
-}
 .section-card__card {
   box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
   background-color: #fdfdff;
@@ -320,6 +319,10 @@ section:not([name=carrousel], [name=swiper]) {
 }
 .section-card__card:hover {
   box-shadow: 0 12px 20px 0 rgba(0, 0, 0, 0.2);
+}
+.section-card__card img {
+  border-radius: 15px;
+  width: 100%;
 }
 .section-card__container {
   padding: 2px 16px;
