--- a/styles.css
+++ b/styles.css
@@ -13,6 +13,8 @@ body {
 
 button {
   background-color: #b20838;
+  font-size: 20px;
+  text-transform: uppercase;
   color: #fdfdff;
   border: none;
   border: solid 2px #fdfdff;
