--- a/partials/_nav.scss
+++ b/partials/_nav.scss
@@ -3,7 +3,7 @@
 .navbar {
     width: 100%;
     position: relative;
-  
+    margin: 0;
     .navbar-top {
       display: flex;
       justify-content: space-between;
