--- a/styles.css
+++ b/styles.css
@@ -7,6 +7,7 @@ html {
 body {
   margin: 0;
   box-sizing: content-box;
+  max-width: 100vw;
   width: 100vw;
   background-color: #e2ded4;
 }
@@ -313,7 +314,6 @@ section:not([name=carrousel], [name=swiper]) {
 .section-card__card {
   box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
   background-color: #fdfdff;
-  border-radius: 15px;
   transition: 0.3s;
   margin: 15px;
   height: 50vh;
@@ -324,7 +324,6 @@ section:not([name=carrousel], [name=swiper]) {
   box-shadow: 0 12px 20px 0 rgba(0, 0, 0, 0.2);
 }
 .section-card__card img {
-  border-radius: 15px;
   width: 100%;
 }
 .section-card__container {
@@ -683,6 +682,16 @@ p {
     text-align: center;
   }
 }
+@media (min-width: 1000px) {
+  .footer-wrapper {
+    grid-template-rows: auto auto auto;
+  }
+  footer:last-of-type {
+    display: grid;
+    justify-items: center;
+    grid-template-columns: auto auto auto;
+  }
+}
 .testimony-wrapper {
   margin: 0 auto;
   display: flex;
@@ -836,6 +845,14 @@ section {
   width: 100vw;
   height: 60vh;
   z-index: 0;
+}
+.swiper .swiper-button-prev {
+  color: #fdfdff;
+  padding-left: 7vw;
+}
+.swiper .swiper-button-next {
+  color: #fdfdff;
+  padding-right: 7vw;
 }
 .swiper .swiper-wrapper .swiper-slide {
   position: relative;
